Added BLAST modifications to DreamerV2

--- a/results/atari/makegif.ipynb
+++ b/results/atari/makegif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "from pathlib import Path\n",
     "import numpy as np\n",
     "from mlflow.tracking import MlflowClient\n",
+    "import mlflow\n",
+    "from mlflow.artifacts import download_artifacts\n",
     "\n",
     "FPS = 10\n",
     "B, T = 5, 50\n",
@@ -18,7 +20,8 @@
     "def download_artifact_npz(run_id, artifact_path) -> Dict[str, np.ndarray]:\n",
     "    client = MlflowClient()\n",
     "    with tempfile.TemporaryDirectory() as tmpdir:\n",
-    "        path = client.download_artifacts(run_id, artifact_path, tmpdir)\n",
+    "        # path = download_artifacts(run_id=run_id, artifact_path=artifact_path)\n",
+    "        path = f'/home/user/data/Ahmad/Ahmad/pydreamer/mlruns/0/{run_id}/artifacts/{artifact_path}'\n",
     "        with Path(path).open('rb') as f:\n",
     "            data = np.load(f)\n",
     "            return {k: data[k] for k in data.keys()}  # type: ignore\n",
@@ -56,68 +59,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/user/data/Ahmad/Ahmad/pydreamer/mlruns/0/e9fc2df4b33741099f1335f3ac6974e5/artifacts/d2_wm_dream/d2_wm_dream/0080001.npz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Montezuma\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m make_gif(\u001b[39m'\u001b[39;49m\u001b[39matari_pong\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39me9fc2df4b33741099f1335f3ac6974e5\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m0080001\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      4\u001b[0m \u001b[39m# make_gif('atari_pong', '83e5def4975242ccbf16a3ca8f62a674', '0500001')\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[41], line 43\u001b[0m, in \u001b[0;36mmake_gif\u001b[0;34m(env_name, run_id, step, fps)\u001b[0m\n\u001b[1;32m     41\u001b[0m dest_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mfigures/dream_\u001b[39m\u001b[39m{\u001b[39;00menv_name\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mstep\u001b[39m}\u001b[39;00m\u001b[39m.gif\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     42\u001b[0m artifact \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39md2_wm_dream/\u001b[39m\u001b[39m{\u001b[39;00mstep\u001b[39m}\u001b[39;00m\u001b[39m.npz\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 43\u001b[0m data \u001b[39m=\u001b[39m download_artifact_npz(run_id, artifact)\n\u001b[1;32m     44\u001b[0m img \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39m\u001b[39mimage_pred\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     45\u001b[0m \u001b[39mprint\u001b[39m(img\u001b[39m.\u001b[39mshape)\n",
+      "Cell \u001b[0;32mIn[41], line 17\u001b[0m, in \u001b[0;36mdownload_artifact_npz\u001b[0;34m(run_id, artifact_path)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39mwith\u001b[39;00m tempfile\u001b[39m.\u001b[39mTemporaryDirectory() \u001b[39mas\u001b[39;00m tmpdir:\n\u001b[1;32m     15\u001b[0m     \u001b[39m# path = download_artifacts(run_id=run_id, artifact_path=artifact_path)\u001b[39;00m\n\u001b[1;32m     16\u001b[0m     path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m/home/user/data/Ahmad/Ahmad/pydreamer/mlruns/0/\u001b[39m\u001b[39m{\u001b[39;00mrun_id\u001b[39m}\u001b[39;00m\u001b[39m/artifacts/d2_wm_dream/\u001b[39m\u001b[39m{\u001b[39;00martifact_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 17\u001b[0m     \u001b[39mwith\u001b[39;00m Path(path)\u001b[39m.\u001b[39;49mopen(\u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     18\u001b[0m         data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m     19\u001b[0m         \u001b[39mreturn\u001b[39;00m {k: data[k] \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m data\u001b[39m.\u001b[39mkeys()}\n",
+      "File \u001b[0;32m~/anaconda3/envs/ahmad-pydreamer/lib/python3.9/pathlib.py:1252\u001b[0m, in \u001b[0;36mPath.open\u001b[0;34m(self, mode, buffering, encoding, errors, newline)\u001b[0m\n\u001b[1;32m   1246\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mself\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m, buffering\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   1247\u001b[0m          errors\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, newline\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m   1248\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1249\u001b[0m \u001b[39m    Open the file pointed by this path and return a file object, as\u001b[39;00m\n\u001b[1;32m   1250\u001b[0m \u001b[39m    the built-in open() function does.\u001b[39;00m\n\u001b[1;32m   1251\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1252\u001b[0m     \u001b[39mreturn\u001b[39;00m io\u001b[39m.\u001b[39;49mopen(\u001b[39mself\u001b[39;49m, mode, buffering, encoding, errors, newline,\n\u001b[1;32m   1253\u001b[0m                    opener\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_opener)\n",
+      "File \u001b[0;32m~/anaconda3/envs/ahmad-pydreamer/lib/python3.9/pathlib.py:1120\u001b[0m, in \u001b[0;36mPath._opener\u001b[0;34m(self, name, flags, mode)\u001b[0m\n\u001b[1;32m   1118\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_opener\u001b[39m(\u001b[39mself\u001b[39m, name, flags, mode\u001b[39m=\u001b[39m\u001b[39m0o666\u001b[39m):\n\u001b[1;32m   1119\u001b[0m     \u001b[39m# A stub for the opener argument to built-in open()\u001b[39;00m\n\u001b[0;32m-> 1120\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor\u001b[39m.\u001b[39;49mopen(\u001b[39mself\u001b[39;49m, flags, mode)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/user/data/Ahmad/Ahmad/pydreamer/mlruns/0/e9fc2df4b33741099f1335f3ac6974e5/artifacts/d2_wm_dream/d2_wm_dream/0080001.npz'"
+     ]
+    }
+   ],
    "source": [
     "# Montezuma\n",
     "\n",
-    "make_gif('montezuma', '599e69d178ca4f65a10423d272f9f45d', '0500001')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Breakout\n",
-    "\n",
-    "make_gif('breakout', '83e5def4975242ccbf16a3ca8f62a674', '0500001')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Space invaders\n",
-    "\n",
-    "make_gif('invaders', '6d57d49ab844475cbb83b606816b01fe', '0500001')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DMC quadruped\n",
-    "\n",
-    "make_gif('quadruped', 'ff6cb24c04de4e6b821bb811c855d207', '0300001')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DMLab goals small\n",
-    "\n",
-    "make_gif('dmlab', '6f78cce067464e8aa4bcb6f35a1a4386', '0161001', fps=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MiniWorld ScavengerHunt\n",
-    "\n",
-    "make_gif('scavenger', '123b575400874f5db75ac7887f4e61c0', '0900001')"
+    "make_gif('atari_pong', 'e9fc2df4b33741099f1335f3ac6974e5', '0080001')\n",
+    "# make_gif('atari_pong', '83e5def4975242ccbf16a3ca8f62a674', '0500001')"
    ]
   },
   {
@@ -129,11 +94,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5edc5171bde170568d9b218d33d0e3dc4de16dbdd983c2ff34b21341823ff124"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('pydreamer': conda)",
+   "display_name": "ahmad-pydreamer",
    "language": "python",
    "name": "python3"
   },
@@ -147,9 +109,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.16"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "8d1040dc2a5c3b89e697fac62c7070ebe67ee767a2427ba40d0fe98709a99e4c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
